[package]
name = "untitled3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
geo = "0.26"
geojson = "0.24"
chrono = "0.4"

[dev-dependencies]
criterion = "0.4"
